package data;

public class TrainingDataException extends Exception{

	public TrainingDataException(String error){
  	super(error);
  }
}
